# slncrypto

./: CMakeLists.txt  crypto.def  dist.info  slncrypt.c
share/slncrypto/test/: cryptest
